# internal/domain/dto/leads/leads.go
@@ -1,6 +1,7 @@
 package leads
 
 import (
+	"github.com/arraisi/hcm-be/internal/domain"
 	"github.com/elgris/sqrl"
 )
 
@@ -13,6 +14,18 @@ type LeadsRequest struct {
 	LeadsPreferenceContactTimeEnd   string  `json:"leads_preference_contact_time_end"`
 	LeadSource                      string  `json:"leads_source" validate:"required"`
 	AdditionalNotes                 *string `json:"additional_notes"`
+}
+
+func NewLeadsRequest(leads domain.Leads) LeadsRequest {
+	return LeadsRequest{
+		LeadsID:                         leads.LeadsID,
+		LeadsType:                       leads.LeadsType,
+		LeadsFollowUpStatus:             leads.LeadsFollowUpStatus,
+		LeadsPreferenceContactTimeStart: leads.LeadsPreferenceContactTimeStart,
+		LeadsPreferenceContactTimeEnd:   leads.LeadsPreferenceContactTimeEnd,
+		LeadSource:                      leads.LeadSource,
+		AdditionalNotes:                 leads.AdditionalNotes,
+	}
 }
 
 // ScoreParameter represents the parameter information in score
@@ -33,15 +46,31 @@ type Score struct {
 	Parameter       ScoreParameter `json:"parameter"`
 }
 
+func NewScoreRequest(leadScore domain.LeadScore) Score {
+	return Score{
+		TAMLeadScore:    leadScore.TAMLeadScore,
+		OutletLeadScore: leadScore.OutletLeadScore,
+		Parameter: ScoreParameter{
+			PurchasePlanCriteria:    leadScore.PurchasePlanCriteria,
+			PaymentPreferCriteria:   leadScore.PaymentPreferCriteria,
+			NegotiationCriteria:     leadScore.NegotiationCriteria,
+			TestDriveCriteria:       leadScore.TestDriveCriteria,
+			TradeInCriteria:         leadScore.TradeInCriteria,
+			BrowsingHistoryCriteria: leadScore.BrowsingHistoryCriteria,
+			VehicleAgeCriteria:      leadScore.VehicleAgeCriteria,
+		},
+	}
+}
+
 type GetLeadsRequest struct {
-	IID     *string
+	ID      *string
 	LeadsID *string
 }
 
 // Apply applies the request parameters to the given SelectBuilder
 func (req GetLeadsRequest) Apply(q *sqrl.SelectBuilder) {
-	if req.IID != nil {
-		q.Where(sqrl.Eq{"i_id": req.IID})
+	if req.ID != nil {
+		q.Where(sqrl.Eq{"id": req.ID})
 	}
 	if req.LeadsID != nil {
 		q.Where(sqrl.Eq{"leads_id": req.LeadsID})
@@ -49,12 +78,12 @@ func (req GetLeadsRequest) Apply(q *sqrl.SelectBuilder) {
 }
 
 type GetLeadScoreRequest struct {
-	IID *string
+	ID *string
 }
 
 // Apply applies the request parameters to the given SelectBuilder
 func (req GetLeadScoreRequest) Apply(q *sqrl.SelectBuilder) {
-	if req.IID != nil {
-		q.Where(sqrl.Eq{"i_id": req.IID})
+	if req.ID != nil {
+		q.Where(sqrl.Eq{"id": req.ID})
 	}
 }
